# Robot-Assisted-Manufacturing

./: .gitignore  LICENSE  README.md  dependencies.rosinstall  ros2_control.rosinstall  tesseract.rosinstall
.docker/: Dockerfile  add_kuka_driver.sh  build_all.sh  build_image.sh  entrypoint.sh  run_control.sh  run_user.sh  run_user_nvidia.sh
.docker/arm64/: Dockerfile
ram_behaviour/: CMakeLists.txt  package.xml
ram_behaviour/launch/: behaviour.launch.py
ram_behaviour/plugins/service/: get_toolpath.cpp  modify_acm_component.cpp  modify_stock_touch_links.cpp  request_trigger_component.cpp  set_bool_component.cpp  set_toolpath.cpp  trigger_component.cpp
ram_behaviour/trees/: cutting_procedure.xml  gui_control.xml  gui_control_subtree.xml  modify_acm_test.xml  switching_gripper.xml  switching_us_cutter.xml
ram_gripper_control/: package.xml  setup.cfg  setup.py
ram_gripper_control/config/: gripper_config.yaml
ram_gripper_control/launch/: real_gripper.launch.py
ram_gripper_control/ram_gripper_control/: gripper_controller.py  implant_handler.py  implant_handler_tf_pub.py  sim_gripper_controller.py
ram_gui/: package.xml  plugin.xml  setup.cfg  setup.py
ram_gui/ram_gui/: implant_holder.py  procedure_controller.py  toolpath_gui.py  toolpath_loader.py  toolpath_params.py  us_cutter.py
ram_gui/resource/: implant_holder.ui  procedure_controller.ui  ram.perspective  toolpath_gui.ui  toolpath_loader.ui  toolpath_params.ui  us_cutter.ui
ram_interfaces/: CMakeLists.txt  package.xml
ram_interfaces/msg/: Toolpath.msg  ToolpathParameters.msg
ram_interfaces/srv/: GetToolpath.srv  GetToolpathParameters.srv  RequestTrigger.srv  SetToolpath.srv  SetToolpathParameters.srv  SetTouchLinks.srv
ram_motion_planning/: CMakeLists.txt  package.xml
ram_motion_planning/config/: fake_controllers.yaml  moveit_cpp.yaml  toolpath_follower_defaults.yaml
ram_motion_planning/include/ram_motion_planning/: base_toolpath_planner.h  helpers.h  logging.h  ompl_constrained_toolpath_planner.h  servo_toolpath_planner.h  toolpath_follower.h  trajectory_utils.h
ram_motion_planning/launch/: example_program.launch.py  moveit2_demo.launch.py  moveit_dev_setup.launch.py  moveit_dev_setup.rviz  moveit_servo_dev_setup.rviz  ompl_toolpath_planner.launch.py  ram_control.launch.py  ram_interface.launch.py  run_ompl_demo.launch.py  servo_toolpath_planner.launch.py  toolpath_follower.launch.py  toolpath_planner.launch.py
ram_motion_planning/src/: base_toolpath_planner.cpp  example_program.cpp  helpers.cpp  logging.cpp  moveit2_demo.cpp  ompl_constrained_toolpath_planner.cpp  ompl_demo.cpp  run_acm_helper.cpp  run_base_planner.cpp  run_ompl_planner.cpp  run_servo_planner.cpp  servo_toolpath_planner.cpp  toolpath_follower_position.cpp  trajectory_utils.cpp
ram_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ram_moveit_config/config/: controllers.yaml  fake_controller_setup.yaml  fake_controllers.yaml  iiwa_gripper.srdf  iiwa_workcell.srdf  joint_limits.yaml  kinematics.yaml  kinematics_trac_ik.yaml  ompl_planning.yaml  ros_controllers.yaml  start_positions.yaml
ram_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa_gripper_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  moveit_motion_planning.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ram_servo/: CMakeLists.txt  package.xml
ram_servo/config/: iiwa_simulated_config_pose_tracking.yaml  pose_tracking_settings.yaml
ram_servo/launch/: servo_demo.launch.py
ram_servo/src/: servo_demo.cpp  servo_subscriber.cpp
ram_support/: CMakeLists.txt  package.xml
ram_support/launch/: move_group.launch.py  view_urdf.launch.py  view_urdf.rviz
ram_support/meshes/schunk_gripper/collision/: jaw_left.stl  jaw_right.stl
ram_support/meshes/schunk_gripper/pgn_100/collision/: left_gripper.stl  main_body.stl
ram_support/meshes/schunk_gripper/pgn_100/visual/: left_gripper.dae  main_body.dae
ram_support/meshes/schunk_gripper/pgn_80/collision/: SCHUNK_PGN-plus-P_80-2_jaw.stl  (+4 more)
ram_support/meshes/schunk_gripper/visual/: jaw_left.dae  jaw_right.dae  right_gripper.dae
ram_support/meshes/stock/collision/: medpor_large.stl
ram_support/meshes/stock/visual/: medpor_large.dae
ram_support/meshes/structure/collision/: iiwa_14_mounting_plate.stl
ram_support/meshes/structure/visual/: iiwa_14_mounting_plate.dae
ram_support/meshes/tools/collision/: DUK8.stl  collision_us_cutter_enclosure.stl  implant_grasp_finger.stl  mock_cutting_blade.stl  us_cutter_enclosure.stl
ram_support/meshes/tools/visual/: DUK8.dae  implant_grasp_finger.dae  mock_cutting_blade.dae  mock_cutting_plate.dae  mock_milling_plate.dae  us_cutter_enclosure.dae
ram_support/urdf/: iiwa_gripper.urdf.xacro  iiwa_workcell.urdf.xacro  implant.urdf.xacro  mock_iiwa_workcell.urdf.xacro
ram_support/urdf/xacros/: cutting_plate.xacro  iiwa.transmission.xacro  iiwa_14.xacro  iiwa_14_mounting_plate.xacro  implant_grasp_fingers.xacro  medpor_stock.xacro  milling_plate.xacro  mock_cutting_plate.xacro  optical_table.xacro  schunk_gripper.xacro  schunk_gripper_pgn_100.xacro  schunk_gripper_pgn_80.xacro
ram_support/urdf/xacros/control/: gripper.ros2_control.xacro  iiwa.ros2_control.xacro
ram_tooling_support/: package.xml  setup.cfg  setup.py
ram_tooling_support/config/: medpor_configuration.yaml  test_no_cut_toolpath_x.yaml  test_toolpath.yaml  test_toolpath_angled.yaml  test_toolpath_arc  test_toolpath_arc_20.yaml  test_toolpath_arc_50.yaml  test_toolpath_straight_x.yaml  test_toolpath_straight_x_reversed.yaml  test_toolpath_straight_y.yaml
ram_tooling_support/launch/: stock_handler.launch.py
ram_tooling_support/ram_tooling_support/: get_acm.py  moveit_stock_handler.py  sim_us_cutter.py  toolpath_handler.py  us_cutter_io.py
(+5 files in other folders)
